# GameSamplesOpenGL

Sample1/: CMakeLists.txt  Sample1.sln  Sample1.vcxproj  main.cpp
Sample2/: CMakeLists.txt  Sample2.cpp  Sample2.h
